--- a/src/components/FooterES.astro
+++ b/src/components/FooterES.astro
@@ -1,5 +1,5 @@
 ---
-import config from '@config/config.json';
+import config from '@config/configES.json';
 import HeartIcon from '@components/icons/HeartIcon.astro';
 const year = new Date().getFullYear();
 ---
@@ -7,11 +7,11 @@ const year = new Date().getFullYear();
 <footer class="mx-auto max-w-screen-lg px-4 sm:px-6 lg:px-8">
   <div class="border-t border-zinc-100 dark:border-zinc-900">
     <p class="mb-8 mt-8 text-center text-xs/relaxed text-zinc-500 dark:text-zinc-400">
-      &copy; {year}. {config.site.title} - All rights RESERVED
+      &copy; {year}. {config.site.title} - Todos los derechos reservados.
       <span class="mt-2 block">
-        Made with
+        Hecho con
         <HeartIcon />
-         in Mexico. by
+         en Mexico. por
         <a
           href="https://ingcapadev.netlify.app/"
           class="text-zinc-700 decoration-dashed transition hover:text-zinc-700/75 dark:text-zinc-200 dark:hover:text-zinc-200/75"
