--- a/src/pages/es/categories/[category].astro
+++ b/src/pages/es/categories/[category].astro
@@ -1,5 +1,5 @@
 ---
-import Base from '@layouts/Base.astro';
+import Base from '@layouts/BaseES.astro';
 import CategoryIcon from '@components/icons/CategoryIcon.astro';
 import { getTaxonomy } from '@utils/getAllTags';
 import { getSinglePage } from '@utils/getAllTags';
@@ -7,7 +7,7 @@ import { taxonomyFilter } from '@utils/getAllTags';
 import { deslugify } from '@utils/slug';
 
 export async function getStaticPaths() {
-  const categories = await getTaxonomy('blog', 'categories');
+  const categories = await getTaxonomy('blogES', 'categories');
 
   return categories.map((category) => {
     return {
@@ -18,18 +18,18 @@ export async function getStaticPaths() {
 
 const { category } = Astro.params;
 
-const posts = await getSinglePage('blog');
+const posts = await getSinglePage('blogES');
 const filterByCategory = taxonomyFilter(posts, 'categories', category);
 ---
 
 <Base>
-  <h1 class="mb-8 text-2xl font-bold capitalize md:text-3xl">Category: {deslugify(category)}</h1>
+  <h1 class="mb-8 text-2xl font-bold capitalize md:text-3xl">Categoria: {deslugify(category)}</h1>
   <ul class="ml-4 space-y-4 text-left text-zinc-500 dark:text-zinc-400 dark:text-zinc-400">
     {
       filterByCategory?.map((post) => (
         <li class="flex items-center space-x-1">
           <CategoryIcon />
-          <a href={`/blog/${post.slug}`} class="text-zinc-500 hover:text-zinc-800 dark:text-zinc-400">
+          <a href={`/es/blog/${post.slug}`} class="text-zinc-500 hover:text-zinc-800 dark:text-zinc-400">
             {post.data.title}
           </a>
         </li>
