--- a/src/pages/es/tags/[tag].astro
+++ b/src/pages/es/tags/[tag].astro
@@ -1,5 +1,5 @@
 ---
-import Base from '@layouts/Base.astro';
+import Base from '@layouts/BaseES.astro';
 import CategoryIcon from '@components/icons/CategoryIcon.astro';
 import { getTaxonomy } from '@utils/getAllTags';
 import { getSinglePage } from '@utils/getAllTags';
@@ -7,26 +7,26 @@ import { taxonomyFilter } from '@utils/getAllTags';
 import { deslugify } from '@utils/slug';
 
 export async function getStaticPaths() {
-  const categories = await getTaxonomy('blog', 'categories');
+  const tags = await getTaxonomy('blog', 'tags');
 
-  return categories.map((category) => {
+  return tags.map((tag) => {
     return {
-      params: { category: category.slug },
+      params: { tag: tag.slug },
     };
   });
 }
 
-const { category } = Astro.params;
+const { tag } = Astro.params;
 
-const posts = await getSinglePage('blog');
-const filterByCategory = taxonomyFilter(posts, 'categories', category);
+const posts = await getSinglePage('blogES');
+const filterByTags = taxonomyFilter(posts, 'tags', tag);
 ---
 
 <Base>
-  <h1 class="mb-8 text-2xl font-bold capitalize md:text-3xl">Category: {deslugify(category)}</h1>
-  <ul class="ml-4 space-y-4 text-left text-zinc-500 dark:text-zinc-400 dark:text-zinc-400">
+  <h1 class="mb-8 text-2xl font-bold md:text-3xl">Etiqueta: {deslugify(tag)}</h1>
+  <ul class="ml-4 space-y-4 text-left text-zinc-500 dark:text-zinc-400">
     {
-      filterByCategory?.map((post) => (
+      filterByTags?.map((post) => (
         <li class="flex items-center space-x-1">
           <CategoryIcon />
           <a href={`/blog/${post.slug}`} class="text-zinc-500 hover:text-zinc-800 dark:text-zinc-400">
