--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -23,7 +23,7 @@ const { main }: { main: NavigationLink[] } = menu;
           <Image
             src={config.site.logo}
             alt={config.site.title}
-            class="w-16 rounded bg-zinc-950"
+            class="w-16 rounded bg-zinc-950 bg-[url('/me.jpg')] bg-cover bg-center"
             width={512}
             height={512}
             decoding="async"
