--- a/src/pages/es/tags/[tag].astro
+++ b/src/pages/es/tags/[tag].astro
@@ -23,13 +23,13 @@ const filterByTags = taxonomyFilter(posts, 'tags', tag);
 ---
 
 <Base>
-  <h1 class="mb-8 text-2xl font-bold md:text-3xl">Etiqueta: {deslugify(tag)}</h1>
+  <h1 class="mb-8 text-2xl font-bold md:text-3xl">Etiqueta: {deslugify(tag as string)}</h1>
   <ul class="ml-4 space-y-4 text-left text-zinc-500 dark:text-zinc-400">
     {
       filterByTags?.map((post) => (
         <li class="flex items-center space-x-1">
           <CategoryIcon />
-          <a href={`/blog/${post.slug}`} class="text-zinc-500 hover:text-zinc-800 dark:text-zinc-400">
+          <a href={`/es/blog/${post.slug}`} class="text-zinc-500 hover:text-zinc-800 dark:text-zinc-400">
             {post.data.title}
           </a>
         </li>
