--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,59 +1,38 @@
 ---
-import Base from "@layouts/Base.astro";
-import Page from "@layouts/Page.astro";
+import Base from '@layouts/Base.astro';
+import Page from '@layouts/Page.astro';
+import Techicon from '@layouts/Techicon.astro';
+import technologies from '@config/technologies';
 ---
 
 <Base meta_title="About">
-  <Page title="About US">
+  <Page title="About Me">
     <p>
-      Morbi tristique senectus et netus. Id semper risus in hendrerit gravida
-      rutrum quisque non tellus. Habitasse platea dictumst quisque sagittis
-      purus sit amet. Tellus molestie nunc non blandit massa. Cursus vitae
-      congue mauris rhoncus. Accumsan tortor posuere ac ut. Fringilla urna
-      porttitor rhoncus dolor. Elit ullamcorper dignissim cras tincidunt
-      lobortis. In cursus turpis massa tincidunt dui ut ornare lectus. Integer
-      feugiat scelerisque varius morbi enim nunc. Bibendum neque egestas congue
-      quisque egestas diam. Cras ornare arcu dui vivamus arcu felis bibendum.
-      Dignissim suspendisse in est ante in nibh mauris. Sed tempus urna et
-      pharetra pharetra massa massa ultricies mi.
+      I am a technology enthusiast 🤖 and passionate about programming 👨‍💻, with a special focus on web development. My
+      mission is to create impactful and functional digital experiences that make people's lives easier and more
+      exciting.
     </p>
 
-    <p>
-      Mollis nunc sed id semper risus in. Convallis a cras semper auctor neque.
-      Diam sit amet nisl suscipit. Lacus viverra vitae congue eu consequat ac
-      felis donec. Egestas integer eget aliquet nibh praesent tristique magna
-      sit amet. Eget magna fermentum iaculis eu non diam. In vitae turpis massa
-      sed elementum. Tristique et egestas quis ipsum suspendisse ultrices. Eget
-      lorem dolor sed viverra ipsum. Vel turpis nunc eget lorem dolor sed
-      viverra. Posuere ac ut consequat semper viverra nam. Laoreet suspendisse
-      interdum consectetur libero id faucibus. Diam phasellus vestibulum lorem
-      sed risus ultricies tristique. Rhoncus dolor purus non enim praesent
-      elementum facilisis. Ultrices tincidunt arcu non sodales neque. Tempus
-      egestas sed sed risus pretium quam vulputate. Viverra suspendisse potenti
-      nullam ac tortor vitae purus faucibus ornare. Fringilla urna porttitor
-      rhoncus dolor purus non. Amet dictum sit amet justo donec enim.
-    </p>
+    <h2>What inspires me</h2>
+    <ul>
+      <li>🌿 I am committed to growing and improving in all aspects of my life, both personally and professionally.</li>
+      <li>⌛ I love exploring personal development and productivity to reach my full potential.</li>
+      <li>🫂 I enjoy collaborating in creative teams and working with people who share my passion for technology.</li>
+    </ul>
 
-    <p>
-      Mattis ullamcorper velit sed ullamcorper morbi tincidunt. Tortor posuere
-      ac ut consequat semper viverra. Tellus mauris a diam maecenas sed enim ut
-      sem viverra. Venenatis urna cursus eget nunc scelerisque viverra mauris
-      in. Arcu ac tortor dignissim convallis aenean et tortor at. Curabitur
-      gravida arcu ac tortor dignissim convallis aenean et tortor. Egestas
-      tellus rutrum tellus pellentesque eu. Fusce ut placerat orci nulla
-      pellentesque dignissim enim sit amet. Ut enim blandit volutpat maecenas
-      volutpat blandit aliquam etiam. Id donec ultrices tincidunt arcu. Id
-      cursus metus aliquam eleifend mi.
-    </p>
+    <h2>Technologies ⚙️</h2>
 
+    <div
+      class="grid grid-cols-[repeat(auto-fill,minmax(4rem,1fr))] gap-4 px-4 pt-4 md:grid-cols-[repeat(auto-fill,minmax(6rem,1fr))]"
+    >
+      {technologies.map((techicon) => <Techicon {...techicon} />)}
+    </div>
+
+    <h2>My Goal 🎯</h2>
     <p>
-      Tempus quam pellentesque nec nam aliquam sem. Risus at ultrices mi tempus
-      imperdiet. Id porta nibh venenatis cras sed felis eget velit. Ipsum a arcu
-      cursus vitae. Facilisis magna etiam tempor orci eu lobortis elementum.
-      Tincidunt dui ut ornare lectus sit. Quisque non tellus orci ac. Blandit
-      libero volutpat sed cras. Nec tincidunt praesent semper feugiat nibh sed
-      pulvinar proin gravida. Egestas integer eget aliquet nibh praesent
-      tristique magna.
+      My goal is to share my knowledge and experience in web development through this blog. Here, you will find articles
+      about the latest technological trends, programming tips, and reflections on the digital world.
     </p>
+    <p>Come join me on this journey, and let's explore the exciting world of technology and programming together! 🚀</p>
   </Page>
 </Base>
