--- a/src/layouts/BaseES.astro
+++ b/src/layouts/BaseES.astro
@@ -41,6 +41,17 @@ const ogImage = createOgImage({
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <!-- responsive meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5" />
+    <!-- Google tag (gtag.js) -->
+    <script type="text/partytown" async src="https://www.googletagmanager.com/gtag/js?id=G-4RFHB4WWS9"></script>
+    <script type="text/partytown">
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'G-4RFHB4WWS9');
+    </script>
 
     <title>{meta_title ? meta_title : title ? title : config.site.title}</title>
     <meta name="title" content={meta_title ? meta_title : title ? title : config.site.title} />
