--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -42,7 +42,7 @@ const ogImage = createOgImage({
     <!-- responsive meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5" />
     <!-- Google tag (gtag.js) -->
-    <script type="text/partytown" async src="https://www.googletagmanager.com/gtag/js?id=G-4RFHB4WWS9"></script>
+    <script type="text/partytown" async src="https://www.googletagmanager.com/gtag/js?id=G-DVRWKZ2Y09"></script>
     <script type="text/partytown">
       window.dataLayer = window.dataLayer || [];
       function gtag() {
@@ -50,7 +50,7 @@ const ogImage = createOgImage({
       }
       gtag('js', new Date());
 
-      gtag('config', 'G-4RFHB4WWS9');
+      gtag('config', 'G-DVRWKZ2Y09');
     </script>
 
     <title>{meta_title ? meta_title : title ? title : config.site.title}</title>
