--- a/src/components/FooterES.astro
+++ b/src/components/FooterES.astro
@@ -1,20 +1,20 @@
 ---
-import config from '@config/configES.json';
 import HeartIcon from '@components/icons/HeartIcon.astro';
+import config from '@config/configES.json';
 const year = new Date().getFullYear();
 ---
 
-<footer class="mx-auto max-w-screen-lg px-4 sm:px-6 lg:px-8">
-  <div class="border-t border-zinc-100 dark:border-zinc-900">
-    <p class="mb-8 mt-8 text-center text-xs/relaxed text-zinc-500 dark:text-zinc-400">
-      &copy; {year}. {config.site.title} - Todos los derechos reservados.
-      <span class="mt-2 block">
+<footer class='mx-auto max-w-screen-lg px-4 sm:px-6 lg:px-8'>
+  <div class='border-t border-zinc-100 dark:border-zinc-900'>
+    <p class='mb-8 mt-8 text-center text-xs/relaxed text-zinc-500 dark:text-zinc-400'>
+      &copy; {year}. {config.site.title}
+      <span class='mt-2 block'>
         Hecho con
         <HeartIcon />
          en Mexico. por
         <a
-          href="https://ingcapadev.com"
-          class="text-zinc-700 decoration-dashed transition hover:text-zinc-700/75 dark:text-zinc-200 dark:hover:text-zinc-200/75"
+          href='https://ingcapadev.com'
+          class='text-zinc-700 decoration-dashed transition hover:text-zinc-700/75 dark:text-zinc-200 dark:hover:text-zinc-200/75'
           >INGCapaDev</a
         >
       </span>
