--- a/src/components/HeaderES.astro
+++ b/src/components/HeaderES.astro
@@ -11,6 +11,7 @@ import LanguageIcon from './LanguageIconES.astro';
 export interface NavigationLink {
   name: string;
   url: string;
+  target?: string;
 }
 
 const { main }: { main: NavigationLink[] } = menu;
@@ -54,7 +55,8 @@ const { main }: { main: NavigationLink[] } = menu;
                 <li>
                   <a
                     href={menu?.url}
-                    class='block rounded-lg px-4 py-2 text-sm text-zinc-500 hover:bg-zinc-50 hover:text-zinc-700 dark:text-zinc-400 dark:hover:bg-zinc-200 dark:hover:text-zinc-800'>
+                    class='block rounded-lg px-4 py-2 text-sm text-zinc-500 hover:bg-zinc-50 hover:text-zinc-700 dark:text-zinc-400 dark:hover:bg-zinc-200 dark:hover:text-zinc-800'
+                    target={menu?.target ?? '_self'}>
                     {menu?.name}
                   </a>
                 </li>
@@ -67,7 +69,7 @@ const { main }: { main: NavigationLink[] } = menu;
         {
           main?.map((menu) => (
             <li class='text-md block rounded-lg px-2 py-2 text-zinc-500 transition-all hover:text-zinc-800 dark:text-zinc-400 dark:hover:text-zinc-200'>
-              <a href={menu?.url} class='relative flex items-center'>
+              <a href={menu?.url} class='relative flex items-center' target={menu?.target ?? '_self'}>
                 {menu?.name === 'Home' ? <HomeIcon /> : menu?.name}
               </a>
             </li>
