--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -32,18 +32,19 @@ const ogImage = createOgImage({
 <html lang={config.site.lang}>
   <head>
     <!-- favicon -->
-    <link rel="shortcut icon" href={config.site.favicon} />
+    <link rel='shortcut icon' href={config.site.favicon} />
+    <link rel='icon' href={config.site.favicon} />
     <!-- theme meta -->
-    <meta name="theme-name" content="bookworm-light-astro" />
-    <meta name="msapplication-TileColor" content="#000000" />
-    <meta name="theme-color" media="(prefers-color-scheme: light)" content="#fff" />
-    <meta name="generator" content={Astro.generator} />
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name='theme-name' content='bookworm-light-astro' />
+    <meta name='msapplication-TileColor' content='#000000' />
+    <meta name='theme-color' media='(prefers-color-scheme: light)' content='#fff' />
+    <meta name='generator' content={Astro.generator} />
+    <meta http-equiv='Content-Type' content='text/html; charset=UTF-8' />
     <!-- responsive meta -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5" />
+    <meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=5' />
     <!-- Google tag (gtag.js) -->
-    <script type="text/partytown" async src="https://www.googletagmanager.com/gtag/js?id=G-DVRWKZ2Y09"></script>
-    <script type="text/partytown">
+    <script type='text/partytown' async src='https://www.googletagmanager.com/gtag/js?id=G-DVRWKZ2Y09'></script>
+    <script type='text/partytown'>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
         dataLayer.push(arguments);
@@ -54,37 +55,37 @@ const ogImage = createOgImage({
     </script>
 
     <title>{meta_title ? meta_title : title ? title : config.site.title}</title>
-    <meta name="title" content={meta_title ? meta_title : title ? title : config.site.title} />
-    <link rel="canonical" href={`${config.site.base_url}/${Astro.url.pathname.replace('/', '')}`} item-prop="url" />
-    {noindex && <meta name="robots" content="noindex,nofollow" />}
-    <meta name="description" content={description ? description : config.metadata.meta_description} />
+    <meta name='title' content={meta_title ? meta_title : title ? title : config.site.title} />
+    <link rel='canonical' href={`${config.site.base_url}/${Astro.url.pathname.replace('/', '')}`} item-prop='url' />
+    {noindex && <meta name='robots' content='noindex,nofollow' />}
+    <meta name='description' content={description ? description : config.metadata.meta_description} />
     <!-- author from config.json -->
-    <meta name="author" content={config.metadata.meta_author} />
+    <meta name='author' content={config.metadata.meta_author} />
     <!-- og-title -->
-    <meta property="og:title" content={meta_title ? meta_title : title ? title : config.site.title} />
+    <meta property='og:title' content={meta_title ? meta_title : title ? title : config.site.title} />
     <!-- og-description -->
-    <meta property="og:description" content={description ? description : config.metadata.meta_description} />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content={`${config.site.base_url}/${Astro.url.pathname.replace('/', '')}`} />
+    <meta property='og:description' content={description ? description : config.metadata.meta_description} />
+    <meta property='og:type' content='website' />
+    <meta property='og:url' content={`${config.site.base_url}/${Astro.url.pathname.replace('/', '')}`} />
 
     <!-- twitter-title -->
-    <meta name="twitter:title" content={meta_title ? meta_title : title ? title : config.site.title} />
+    <meta name='twitter:title' content={meta_title ? meta_title : title ? title : config.site.title} />
     <!-- twitter-description -->
-    <meta name="twitter:description" content={description ? description : config.metadata.meta_description} />
+    <meta name='twitter:description' content={description ? description : config.metadata.meta_description} />
     <!-- og-image -->
-    <meta property="og:image" content={ogImage} />
+    <meta property='og:image' content={ogImage} />
     <!-- twitter-image -->
-    <meta name="twitter:image" content={ogImage} />
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta name='twitter:image' content={ogImage} />
+    <meta name='twitter:card' content='summary_large_image' />
 
-    <script is:inline src="/registerSW.js"></script>
-    <link rel="manifest" href="/manifest.webmanifest" />
+    <script is:inline src='/registerSW.js'></script>
+    <link rel='manifest' href='/manifest.webmanifest' />
     <ViewTransitions />
   </head>
-  <body class="bg-white dark:bg-zinc-900/95">
+  <body class='bg-white dark:bg-zinc-900/95'>
     <Header />
     {!blogpost && <Hero />}
-    <main class="mx-auto max-w-screen-lg px-4 py-8 sm:px-6 sm:py-12 lg:px-8">
+    <main class='mx-auto max-w-screen-lg px-4 py-8 sm:px-6 sm:py-12 lg:px-8'>
       <slot />
     </main>
     {!blogpost && config.features.youtube && <FeaturedVideos />}
